@@ -221,7 +221,7 @@ sub _cleanupTitle {
     my $self  = shift;
     my $title = $self->{page_title};
 
-    $title =~ s/youtube|liveleak.com|sevenload|dailymotion//gi;
+    $title =~ s/youtube|liveleak.com|sevenload|dailymotion|on vimeo//gi;
     $title =~ s/cctv.com|redtube|ehrensenf|clipfish|funny hub//gi;
     $title =~ s/video(s?)//gi;
     $title =~ s/^[-\s]+//;
