@@ -2,6 +2,8 @@ Version 2.2.6
 
  User-visible changes:
   * Fix: liveleak: "error: Unsupported protocol (http/1)" (closes #36)
+  * Fix: vimeo: title parsing (Thanks to Peter Baranyi for the fix, closes #37)
+    - Fixes title issues with accented chars
 
  Developer-visible changes:
   * t/11redtube.t: fix dead link
